# rooms

./: .gitignore  .roomsrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.devcontainer/: README.md  devcontainer.json  setup.sh
.github/workflows/: ci.yml  release.yml  update-homebrew.yml
docs/: releasing.md
reqs/: 0-overview.md  1-glossary.md  10-operations-and-logging.md  11-distribution.md  12-release.md  2-nonfunctional.md  3-state-model.md  4-keybindings.md  5-cli.md  6-config.md  7-side-nav.md  8-pseudoterminal.md  9-room-lifecycle.md
scripts/: release.ts
src/: main.rs
src/config/: mod.rs
src/git/: command.rs  mod.rs  repo.rs  worktree.rs
src/room/: create.rs  discovery.rs  mod.rs  model.rs  naming.rs  post_create.rs  remove.rs  rename.rs
src/state/: events.rs  mod.rs  transient.rs
src/terminal/: debug_log.rs  mod.rs  session.rs
src/ui/: app.rs  clipboard.rs  confirm.rs  context_menu.rs  help.rs  input.rs  main_scene.rs  mod.rs  prompt.rs  selection.rs  sidebar.rs
