[package]
name = "rooms"
version = "0.0.1"
edition = "2021"
authors = ["Felipe Plets <fsplets@gmail.com>"]
description = "Terminal UI for managing Git worktrees"
license = "MIT"
repository = "https://github.com/felipeplets/rooms"
keywords = ["git", "worktree", "tui", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
rand = "0.9"
portable-pty = "0.9"
vt100 = "0.16"
unicode-width = "0.2"
dirs = "6.0"

[dev-dependencies]
tempfile = "3.0"

[profile.release]
lto = true
strip = true
