[package]
name = "rooms"
version = "0.2.0"
edition = "2024"
authors = ["Felipe Plets <fsplets@gmail.com>"]
description = "Terminal UI for managing Git worktrees"
license = "MIT"
repository = "https://github.com/felipeplets/rooms"
keywords = ["git", "worktree", "tui", "terminal"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.30.0"
crossterm = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.17"
anyhow = "1.0.100"
rand = "0.9.2"
portable-pty = "0.9.0"
vt100 = "0.16.2"
unicode-width = "0.2.2"
dirs = "6.0.0"

[dev-dependencies]
tempfile = "3.24.0"

[profile.release]
lto = true
strip = true
